@@ -92,11 +92,6 @@ struct FlowNode {
 	uint32_t	packets;	// summed up number of packets
 	uint32_t	bytes;		// summed up number of bytes
 
-	// flow payload
-#define DATABLOCKSIZE 256
-	uint32_t	DataSize;	// max size of data buffer
-	void		*data;		// start of data buffer
-
 	struct FlowNode *rev_node;
 	struct latency_s {
 		uint64_t    client;
